# type2-runtime

./: .gitignore  BUILD.bazel  BUILD.md  Dockerfile  MODULE.bazel  README.md  Vagrantfile  _codeql_detected_source_root  build-with-docker.sh  build.sh  build_docker.sh  chroot_build.sh  external  sign.sh  signing-pubkey.asc  squashfuse.diff
.github/: dependabot.yml
.github/workflows/: build.yaml  pr-comment.yaml
chroot/: build.sh  chroot_build.sh
patches/libfuse/: mount.c.diff
scripts/: build-in-container.sh  build-runtime.sh  build-with-docker.sh  create-build-container.sh  install-dependencies.sh  sign.sh
scripts/chroot/: build.sh  chroot_build.sh
scripts/common/: install-dependencies.sh
scripts/docker/: Dockerfile  build-with-docker.sh  create-build-container.sh
src/runtime/: Makefile  data_sections.ld  runtime.c
